Adding Media Queries and fixing some problems

--- a/notable-programmers.html
+++ b/notable-programmers.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/subpage-styles.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
+        rel="stylesheet">
 
     <!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -22,23 +23,20 @@
 <body>
     <div class="container">
         <header>
-                <div class="header" id="header">
-                    <div class="logo" id="logo" tabindex="0">
-                        <i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
-                    </div>
-                    <nav>
-                        <div class="navigation">
-                            <ol class="navigation-list">
-                                <li class="navigation-item" id="go-back" tabindex="0"><a href="index.html" class="link">Go Back </a></li>
-                            </ol>
-                            <button class="hamburger">
-                                <span class="line"></span>
-                                <span class="line"></span>
-                                <span class="line"></span>
-                            </button>
-                        </div>
-                    </nav>
+            <div class="header" id="header">
+                <div class="logo" id="logo" tabindex="0">
+                    <i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
                 </div>
+                <nav>
+                    <div class="navigation-subpage">
+                        <ol class="navigation-subpage-list">
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="index.html"
+                                    class="link">Go
+                                    Back </a></li>
+                        </ol>
+                    </div>
+                </nav>
+            </div>
         </header>
         <main>
             <article>
@@ -66,7 +64,7 @@
                     Excitation."
                 </div>
             </section>
-           <article>
+            <article>
                 <div class="paragraph-container">
                     <div class="tags-container">
                         <div class="tag">History</div>
@@ -74,7 +72,7 @@
                         <div class="tag">History</div>
                     </div>
                     <div class="paragraph">
-                        <img src="img/bill-gates.jpg" alt="Bill Gates in a suit." class="introduction-image">
+                        <img src="img/bill-gates.jpeg" alt="Bill Gates in a suit." class="paragraph-image">
                         <p class="paragraph-text">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s when an unknown printer took a
@@ -99,12 +97,17 @@
         </main>
         <footer>
             <div class="footer">
-                <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
+                <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon
+                    Hyziak</p>
                 <p class="social-media-icons">
-                    <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
-                    <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
-                    <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
-                    <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i></a>
+                    <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
+                            id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
+                    <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube"
+                            id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
+                    <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost"
+                            id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
+                    <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in"
+                            id="linkedin" title="Linkedin" tabindex="0"></i></a>
                 </p>
             </div>
         </footer>
