Fixed some unexpected bugs

--- a/notable-programmers.html
+++ b/notable-programmers.html
@@ -30,9 +30,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="index.html"
-                                    class="link">Go
-                                    Back </a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="index.html" class="link">Go Back </a></li>
                         </ol>
                     </div>
                 </nav>
@@ -71,7 +69,6 @@
                         <div class="tag" tabindex="0">Microsoft</div>
                     </div>
                     <div class="paragraph">
-                        <img src="img/bill-gates.jpeg" alt="Bill Gates in a suit." class="paragraph-image">
                         <div title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                             <img src="img/bill-gates.jpeg" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses." class="introduction-image" tabindex="0">   
                         </div>
