Fixing some unexpected bugs

--- a/notable-programmers.html
+++ b/notable-programmers.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="paragraph">
                         <div title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
-                            <img src="img/bill-gates.jpeg" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses." class="introduction-image" tabindex="0">   
+                            <img src="img/bill-gates.jpeg" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses." class="paragraph-image" tabindex="0">   
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Gates was born and raised in Seattle, Washington. In 1975, he co-founded Microsoft with
