--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 				<nav>
 					<div class="navigation">
 						<ol class="navigation-list">
-							<li class="navigation-item" id="about-us" tabindex="0"><a href="#" class="link">About Us</a></li>
-							<li class="navigation-item" id="offer" tabindex="0"><a href="#" class="link">Offer</a></li>
-							<li class="navigation-item" id="contact" tabindex="0"><a href="#" class="link">Contact</a></li>
+							<li class="navigation-item" id="about-us"><a href="#" class="link">About Us</a></li>
+							<li class="navigation-item" id="offer"><a href="#" class="link">Offer</a></li>
+							<li class="navigation-item" id="contact"><a href="#" class="link">Contact</a></li>
 						</ol>
 						<button class="hamburger">
 							<span class="line"></span>
@@ -111,10 +111,10 @@
 			<div class="footer">
 				<p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
 				<p class="social-media-icons">
-					<a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
-					<a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
-					<a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
-					<a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i></a>
+					<a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook"></i></a> &emsp;
+					<a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube"></i></a>&emsp;
+					<a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat"></i></a> &emsp;
+					<a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin"></i></a>
 				</p>
 			</div>
 		</footer>
