Addition of final touches

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
+
+	<meta name="description" content="Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Check us out!">
+	<meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="title" content="The Gallery of Remarkable People">
+	<meta name="robots" content="index, follow">
+	<meta name="revisit-after" content="7 days">
+	<meta name="author" content="Szymon Hyziak & Filip Kubala">
 
 	<title>The Gallery of Remarkable People</title>
 
@@ -23,8 +30,8 @@
 	<div class="container">
 		<header>
 			<div class="header" id="header">
-				<div class="logo" id="logo" tabindex="0">
-					<a href="index.html" class="link"><i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People </a>
+				<div class="logo" id="logo">
+					<a href="index.html" class="link"><i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People</a>
 				</div>
 				<nav>
 					<div class="navigation">
@@ -100,7 +107,7 @@
 								<img src="img/ask-customer-feedback.png" class="illustration-question" alt="Here is a huge question mark. In the foreground there are two men.">
 							</div>
 						</div>
-						<button class="form-button" type="submit">
+						<button class="form-button" type="submit" title="Submit your form!">
 							Submit! <span class="message"><i class="far fa-envelope"></i></span>
 						</button>
 					</div>
@@ -124,5 +131,4 @@
 	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
 	<script src="js/navbar-mobile.js" defer></script>
 </body>
-
 </html>
