Making the subpage more interactive

--- a/bill-gates.html
+++ b/bill-gates.html
@@ -58,7 +58,7 @@
                     <div class="image-container" title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                         <img src="img/bill-gates.jpeg" class="introduction-image">
                     </div>
-                    <i class="fas fa-arrow-right" tabindex="0"></i>
+                    <a href="ada-lovelace.html" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
             </article>
             <section>
@@ -75,8 +75,8 @@
                         <div class="tag" tabindex="0">Microsoft</div>
                     </div>
                     <div class="paragraph">
-                        <div title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
-                            <img src="img/bill-gates.jpeg" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses." class="paragraph-image" tabindex="0">   
+                        <div title="">
+                            <img src="img/bill-gates-2.jpg" alt="" class="paragraph-image" tabindex="0">   
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Gates was born and raised in Seattle, Washington. In 1975, he co-founded Microsoft with
