--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<nav>
 					<div class="navigation">
 						<ol class="navigation-list">
-							<li class="navigation-item" id="about-us"><a href="#" class="link">About Us</a></li>
+							<li class="navigation-item" id="about-us" title="Sorry! You can't click me. :-("><a href="#" class="link">About Us</a></li>
 							<li class="navigation-item" id="offer"><a href="#" class="link">Offer</a></li>
 							<li class="navigation-item" id="contact"><a href="#" class="link">Contact</a></li>
 						</ol>
