Creation of the website's structure

--- a/programmers/ada-lovelace.html
+++ b/programmers/ada-lovelace.html
@@ -15,9 +15,9 @@
 
     <title>Augusta Ada Lovelace - The Gallery</title>
 
-    <link rel="icon" href="img/atlas.png">
-    <link rel="stylesheet" href="css/subpage-styles.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="../img/atlas.png">
+    <link rel="stylesheet" href="../css/subpage-styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
@@ -36,7 +36,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="index.html" class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../index.html" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -47,25 +47,26 @@
                 <div class="introduction-container">
                     <a href="bill-gates.html" class="link"><i class="fas fa-arrow-left" tabindex="0"></i></a>
                     <div class="introduction-text">
-                        <h1 class="introduction-headline" tabindex="0">Augusta Ada King, Countess of Lovelace</h1>
+                        <h1 class="introduction-headline" tabindex="0">Augusta Ada King</h1>
                         <p class="introduction-paragraph" tabindex="0">
                             Was an English mathematician and writer known for her work on mechanical general-purpose
                             computer. She was the first to recognise that the machine had applications beyond pure
-                            calculation, and to have published the first algorithm intended to be carried out by such a
-                            machine. As a result, she is often regarded as one of the first computer programmers.
+                            calculation. As a result, she is often regarded as one of the first computer programmers.
                         </p>
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
                     <div class="image-container" title="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
-                        <img src="img/ada-lovelace.jpg" class="introduction-image" alt="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
+                        <img src="../img/ada-lovelace.jpg" class="introduction-image" alt="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
                     </div>
                 </div>
             </article>
             <section>
                 <div class="filler" tabindex="0">
-                    <img alt="" src="img/study.png" class="filler-img">In December 2016, a letter written by Ada
-                    Lovelace was forfeited by Martin Shkreli to the New York State Department of Taxation and Finance
-                    for unpaid taxes owed by Shkreli.
+                    <img alt="" src="../img/study.png" class="filler-img">
+                    <span class="filler-text">
+                        In December 2016, a letter written by Ada Lovelace was forfeited by Martin Shkreli to the NY
+                        State Department of Taxation and Finance for unpaid taxes.
+                    </span>
                 </div>
             </section>
             <article>
@@ -75,8 +76,8 @@
                         <div class="tag" tabindex="0">Babbage's Analytical Engine</div>
                     </div>
                     <div class="paragraph">
-                        <div title="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
-                            <img src="img/ada-lovelace-2.webp" alt="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer." class="paragraph-image" tabindex="0">   
+                        <div title="An illustration of Ada Lovelace.">
+                            <img src="../img/ada-lovelace-2.jpg" alt="An illustration of Ada Lovelace." class="paragraph-image" tabindex="0">   
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Privately educated in mathematics and science. The mathematician De Morgan helped her in
@@ -115,7 +116,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
-    <script src="js/single-ink-with-offset.js" defer></script>
-    <script src="js/navbar-mobile.js" defer></script>
+    <script src="../js/single-ink-with-offset.js" defer></script>
+    <script src="../js/navbar-mobile.js" defer></script>
 </body>
 </html>
