--- a/programmers/bill-gates.html
+++ b/programmers/bill-gates.html
@@ -15,9 +15,9 @@
 
     <title>Bill Gates - The Gallery</title>
 
-    <link rel="icon" href="img/atlas.png">
-    <link rel="stylesheet" href="css/subpage-styles.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="../img/atlas.png">
+    <link rel="stylesheet" href="../css/subpage-styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
@@ -36,7 +36,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="index.html" class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../index.html" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -56,16 +56,18 @@
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
                     <div class="image-container" title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
-                        <img src="img/bill-gates.jpeg" class="introduction-image">
+                        <img src="../img/bill-gates.jpeg" class="introduction-image">
                     </div>
                     <a href="ada-lovelace.html" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
             </article>
             <section>
                 <div class="filler" tabindex="0"> 
-                    <img alt="" src="img/study.png" class="filler-img">Gates made a guest appearance as himself on the
-                    TV show The Big Bang Theory. The episode on which he appeared was appropriately entitled "The Gates
-                    Excitation."
+                    <img alt="" src="../img/study.png" class="filler-img">
+                    <span class="filler-text">
+                        Gates made a guest appearance as himself on the TV show The Big Bang Theory. The episode on
+                        which he appeared was appropriately entitled "The Gates Excitation."
+                    </span>
                 </div>
             </section>
             <article>
@@ -75,8 +77,8 @@
                         <div class="tag" tabindex="0">Microsoft</div>
                     </div>
                     <div class="paragraph">
-                        <div title="">
-                            <img src="img/bill-gates-2.jpg" alt="" class="paragraph-image" tabindex="0">   
+                        <div title="Bill Gates in a suit. He is smiling in a subtle way and looking to the left.">
+                            <img src="../img/bill-gates-2.jpg" alt="Bill Gates in a suit. He is smiling in a subtle way and looking to the left." class="paragraph-image" tabindex="0">   
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Gates was born and raised in Seattle, Washington. In 1975, he co-founded Microsoft with
@@ -115,7 +117,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
-    <script src="js/single-ink-with-offset.js" defer></script>
-    <script src="js/navbar-mobile.js" defer></script>
+    <script src="../js/single-ink-with-offset.js" defer></script>
+    <script src="../js/navbar-mobile.js" defer></script>
 </body>
 </html>
