--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<header>
 			<div class="header" id="header">
 				<div class="logo" id="logo">
-					<a href="index.html" class="link"><i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People</a>
+					<a href="strona-glowna" class="link"><i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People</a>
 				</div>
 				<nav>
 					<div class="navigation">
