--- a/programmers/ada-lovelace.html
+++ b/programmers/ada-lovelace.html
@@ -36,7 +36,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../index.html" class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -45,7 +45,7 @@
         <main>
             <article>
                 <div class="introduction-container">
-                    <a href="bill-gates.html" class="link"><i class="fas fa-arrow-left" tabindex="0"></i></a>
+                    <a href="bill-gates" class="link"><i class="fas fa-arrow-left" tabindex="0"></i></a>
                     <div class="introduction-text">
                         <h1 class="introduction-headline" tabindex="0">Augusta Ada King</h1>
                         <p class="introduction-paragraph" tabindex="0">
