--- a/cryptographers/marian-rejewski.html
+++ b/cryptographers/marian-rejewski.html
@@ -36,7 +36,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../index.html" class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -59,7 +59,7 @@
                     <div class="image-container" title="Close view of the Enigma machine.">
                         <img src="../img/enigma.jpg" class="introduction-image" alt="Close view of the Enigma machine.">
                     </div>
-                    <a href="elizabeth-smith-friedman.html" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
+                    <a href="elizabeth-smith-friedman" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
             </article>
             <section>
