--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -79,8 +79,8 @@
             <article>
                 <div class="paragraph-container">
                     <div class="tags-container">
-                        <div class="tag" tabindex="0">Childhood</div>
-                        <div class="tag" tabindex="0">Microsoft</div>
+                        <div class="tag" tabindex="0">Images</div>
+                        <div class="tag" tabindex="0">Marriage</div>
                     </div>
                     <div class="paragraph">
                         <div
