--- a/social-media-creators/pichai-sundararajan.html
+++ b/social-media-creators/pichai-sundararajan.html
@@ -82,8 +82,8 @@
             <article>
                 <div class="paragraph-container">
                     <div class="tags-container">
-                        <div class="tag" tabindex="0">Education</div>
-                        <div class="tag" tabindex="0">Babbage's Analytical Engine</div>
+                        <div class="tag" tabindex="0">Job</div>
+                        <div class="tag" tabindex="0">Google</div>
                     </div>
                     <div class="paragraph">
                         <div title="An illustration of Ada Lovelace.">
