--- a/designers/steve-jobs.html
+++ b/designers/steve-jobs.html
@@ -77,8 +77,8 @@
             <article>
                 <div class="paragraph-container">
                     <div class="tags-container">
-                        <div class="tag" tabindex="0">Childhood</div>
-                        <div class="tag" tabindex="0">Microsoft</div>
+                        <div class="tag" tabindex="0">Microcomputers</div>
+                        <div class="tag" tabindex="0">Apple</div>
                     </div>
                     <div class="paragraph">
                         <div title="Steve Jobs and Steve Wozniak in their youth.">
