--- a/designers/steve-jobs.html
+++ b/designers/steve-jobs.html
@@ -60,17 +60,18 @@
                         </p>
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
-                    <div class="image-container" title="Kevin Systrom is saying speech. Probably he is on conference">
-                        <img src="../img/steve-jobs1.jpg" class="introduction-image">
+                    <div class="image-container" title="Steve Jobs is sitting on a chair reading while using an iPad.">
+                        <img src="../img/steve-jobs.jfif" class="introduction-image">
                     </div>
-                    <a href="ada-augusta-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
             </article>
             <section>
                 <div class="filler" tabindex="0">
                     <img alt="" src="../img/study.png" class="filler-img">
                     <span class="filler-text">
-                        Apple co-founder Steve Wozniak notes that Jobs never learned how to code.
+                        In 1989, Jobs first met his future wife, Laurene Powell, when he gave a lecture at the Stanford
+                        Graduate School of Business, where she was a student. Soon after the event, he stated that
+                        Laurene was right there in the front row and he couldn't take my eyes off of her.
                     </span>
                 </div>
             </section>
@@ -82,7 +83,7 @@
                     </div>
                     <div class="paragraph">
                         <div title="Steve Jobs and Steve Wozniak in their youth.">
-                            <img src="../img/steve-jobs.jpg" alt="Steve Jobs and Steve Wozniak in their youth."
+                            <img src="../img/steve-jobs2.jpg" alt="Steve Jobs presenting an iPhone."
                                 class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
