--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<label for="name" class="form-labels">Your name:</label>
 									<input type="text" id="name" class="form-inputs">
 								</div>
-								<div class="label-input" title="Enter your name here.">
+								<div class="label-input" title="Enter your phone number here.">
 									<label for="phone-number" class="form-labels">Your phone:</label>
 									<input type="tel" id="phone-number" class="form-inputs">
 								</div>
