--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -70,7 +70,7 @@
                 <div class="filler" tabindex="0">
                     <img alt="" src="../img/study.png" class="filler-img">
                     <span class="filler-text">
-                        As a teenager, Systrom was obsessed with record collecting and deejaying. While still in high
+                        As a teenager, Systrom was obsessed with record collecting. While still in high
                         school, he used to have his friends sneak him into clubs in the Boston area to open for
                         established DJs.
                     </span>
@@ -79,7 +79,7 @@
             <article>
                 <div class="paragraph-container">
                     <div class="tags-container">
-                        <div class="tag" tabindex="0">Images</div>
+                        <div class="tag" tabindex="0">Pope Francis</div>
                         <div class="tag" tabindex="0">Marriage</div>
                     </div>
                     <div class="paragraph">
