--- a/social-media-creators/pichai-sundararajan.html
+++ b/social-media-creators/pichai-sundararajan.html
@@ -63,9 +63,9 @@
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
                     <div class="image-container"
-                        title="Pichai Sundararajan is saying something. He gesturing his both hand.">
+                        title="Pichai Sundararajan during a public speech. He is gesturing.">
                         <img src="../img/pichai-sundararajan1.jpeg" class="introduction-image"
-                            alt="Pichai Sundararajan is saying something. He gesturing his both hand.">
+                            alt="Pichai Sundararajan during a public speech. He is gesturing.">
                     </div>
                 </div>
             </article>
@@ -82,13 +82,12 @@
             <article>
                 <div class="paragraph-container">
                     <div class="tags-container">
-                        <div class="tag" tabindex="0">Job</div>
+                        <div class="tag" tabindex="0">Alphabet</div>
                         <div class="tag" tabindex="0">Google</div>
                     </div>
                     <div class="paragraph">
-                        <div title="An illustration of Ada Lovelace.">
-                            <img src="../img/pichai-sundararajan.jpg" alt="Pichai Sundararajan is saying something. He gesturing his both hand. Probably He is
-                                on conference." class="paragraph-image" tabindex="0">
+                        <div title="Portrait of Pichai Sundararajan">
+                            <img src="../img/pichai-sundararajan.jpg" alt="Portrait of Pichai Sundararajan." class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             He was selected to become the next CEO of Google on August 10, 2015, after previously being
