--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-	<meta name="description" content="Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Check us out!">
-	<meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+	<meta name="description"
+		content="Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Check us out!">
+	<meta name="keywords"
+		content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="title" content="The Gallery of Remarkable People">
@@ -19,7 +22,8 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
+		rel="stylesheet">
 
 	<!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -31,12 +35,12 @@
 		<header>
 			<div class="header" id="header">
 				<div class="logo" id="logo">
-					<a href="strona-glowna" class="link"><i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People</a>
+					<i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
 				</div>
 				<nav>
 					<div class="navigation">
 						<ol class="navigation-list">
-							<li class="navigation-item" id="about-us" title="Sorry! You can't click me. :-("><a href="#" class="link">About Us</a></li>
+							<li class="inactive-navigation-item" title="Sorry! You can't click me. :-(">About Us</li>
 							<li class="navigation-item" id="offer"><a href="#" class="link">Offer</a></li>
 							<li class="navigation-item" id="contact"><a href="#" class="link">Contact</a></li>
 						</ol>
@@ -56,37 +60,52 @@
 					<div class="intro">
 						<h2 class="headline" tabindex="0">Profiles of famous computer<br>scientists in one place!</h2>
 						<div class="description-button">
-							<p class="description" tabindex="0">Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for more!</p>
-							<a href="#" tabindex="0" title="Scroll down for more!" id="btn-hand-down" class="link"><i class="far fa-hand-point-down"></i></a>
+							<p class="description" tabindex="0">Have you ever really gone through biographies of famous
+								people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for
+								more!</p>
+							<a href="#" tabindex="0" title="Scroll down for more!" id="btn-hand-down" class="link"><i
+									class="far fa-hand-point-down"></i></a>
 						</div>
 					</div>
-					<div title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration." >
-						<img src="img/software-engineer.png" class="illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration.">
+					<div
+						title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration.">
+						<img src="img/software-engineer.png" class="illustration"
+							alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration.">
 					</div>
 				</div>
 			</section>
 			<svg xmlns="http://www.w3.org/2000/svg" height="575" id="svg-element" width="100%">
 				<g transform="translate(0, 520)">
-					<path transform="scale(1, -1) translate(0, -100)" fill="#00C5D4" fill-opacity="1" d="M0,224L28,224C48,224,96,224,144,186.7C192,149,240,75,288,69.3C336,64,384,128,432,154.7C480,181,528,171,576,154.7C624,139,672,117,720,106.7C768,96,816,96,864,117.3C912,139,960,181,1008,181.3C1056,181,1104,139,1152,117.3C1200,96,1248,96,1296,106.7C1344,117,1392,139,1416,149.3L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path>
+					<path transform="scale(1, -1) translate(0, -100)" fill="#00C5D4" fill-opacity="1"
+						d="M0,224L28,224C48,224,96,224,144,186.7C192,149,240,75,288,69.3C336,64,384,128,432,154.7C480,181,528,171,576,154.7C624,139,672,117,720,106.7C768,96,816,96,864,117.3C912,139,960,181,1008,181.3C1056,181,1104,139,1152,117.3C1200,96,1248,96,1296,106.7C1344,117,1392,139,1416,149.3L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z">
+					</path>
 				</g>
 				<g>
-					<path fill="#00C5D4" fill-opacity="1" d="M0,224L24,224C48,224,96,224,144,186.7C192,149,240,75,288,69.3C336,64,384,128,432,154.7C480,181,528,171,576,154.7C624,139,672,117,720,106.7C768,96,816,96,864,117.3C912,139,960,181,1008,181.3C1056,181,1104,139,1152,117.3C1200,96,1248,96,1296,106.7C1344,117,1392,139,1416,149.3L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path>
+					<path fill="#00C5D4" fill-opacity="1"
+						d="M0,224L24,224C48,224,96,224,144,186.7C192,149,240,75,288,69.3C336,64,384,128,432,154.7C480,181,528,171,576,154.7C624,139,672,117,720,106.7C768,96,816,96,864,117.3C912,139,960,181,1008,181.3C1056,181,1104,139,1152,117.3C1200,96,1248,96,1296,106.7C1344,117,1392,139,1416,149.3L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z">
+					</path>
 				</g>
 			</svg>
 			<section class="category-section">
 				<div class="categories-container" id="categories-container">
-					<p class="categories-introduction" id="categories" tabindex="0">Browse your favorite category!&emsp;<i class="far fa-smile-beam"></i></p>
+					<p class="categories-introduction" id="categories" tabindex="0">Browse your favorite
+						category!&emsp;<i class="far fa-smile-beam"></i></p>
 					<ol class="category-list">
-						<li class="category" id="notable-programmers" tabindex="0">Notable Programmers<br><br><i class="fas category-icon fa-code-branch"></i></li>
-						<li class="category" id="social-media-creators" tabindex="0">Social Media Creators<br><br><i class="fas category-icon fa-hashtag"></i></li>
-						<li class="category" id="notable-designers" tabindex="0">Notable Computer Designers<br><br><i class="fas category-icon fa-paint-brush"></i></li>
-						<li class="category" id="famous-cryptographers" tabindex="0">Famous Cryptographers<br><br><i class="far category-icon fa-keyboard"></i></li>
+						<li class="category" id="notable-programmers" tabindex="0">Notable Programmers<br><br><i
+								class="fas category-icon fa-code-branch"></i></li>
+						<li class="category" id="social-media-creators" tabindex="0">Social Media Creators<br><br><i
+								class="fas category-icon fa-hashtag"></i></li>
+						<li class="category" id="notable-designers" tabindex="0">Notable Computer Designers<br><br><i
+								class="fas category-icon fa-paint-brush"></i></li>
+						<li class="category" id="famous-cryptographers" tabindex="0">Famous Cryptographers<br><br><i
+								class="far category-icon fa-keyboard"></i></li>
 					</ol>
 				</div>
 			</section>
 			<section>
 				<div class="form-container" id="form-container">
-					<p class="form-introduction" tabindex="0">Get in touch with us here...<i class="far fa-paper-plane"></i></p>
+					<p class="form-introduction" tabindex="0">Get in touch with us here...<i
+							class="far fa-paper-plane"></i></p>
 					<div class="form">
 						<div class="form-ilustration">
 							<form method="" action="">
@@ -104,7 +123,8 @@
 								</div>
 							</form>
 							<div title="Here is a huge question mark. In the foreground there are two men.">
-								<img src="img/ask-customer-feedback.png" class="illustration-question" alt="Here is a huge question mark. In the foreground there are two men.">
+								<img src="img/ask-customer-feedback.png" class="illustration-question"
+									alt="Here is a huge question mark. In the foreground there are two men.">
 							</div>
 						</div>
 						<button class="form-button" type="submit" title="Submit your form!">
@@ -116,12 +136,17 @@
 		</main>
 		<footer>
 			<div class="footer">
-				<p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
+				<p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon
+					Hyziak</p>
 				<p class="social-media-icons">
-					<a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook"></i></a> &emsp;
-					<a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube"></i></a>&emsp;
-					<a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat"></i></a> &emsp;
-					<a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin"></i></a>
+					<a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
+							id="facebook" title="Facebook"></i></a> &emsp;
+					<a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube"
+							id="youtube" title="YouTube"></i></a>&emsp;
+					<a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost"
+							id="snapchat" title="Snapchat"></i></a> &emsp;
+					<a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in"
+							id="linkedin" title="Linkedin"></i></a>
 				</p>
 			</div>
 		</footer>
@@ -131,4 +156,5 @@
 	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
 	<script src="js/navbar-mobile.js" defer></script>
 </body>
+
 </html>
