--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-    <meta name="description"
-        content=" Do you know who is an American business magnate, software developer, investor, author, landowner, and philanthropist?">
+    <meta name="description" content="">
     <meta name="keywords"
         content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
@@ -85,8 +84,9 @@
                     <div class="paragraph">
                         <div
                             title="Kevin Systrom is saying something. He gesturing his left hand. Probably He is on press conference">
-                            <img src="../img/kevin-systrom.jpg" alt="Kevin Systrom is saying something. He gesturing his left hand. Probably He is on
-                                press conference" class="paragraph-image" tabindex="0">
+                            <img src="../img/kevin-systrom.jpg"
+                                alt="Kevin Systrom is saying something. He gesturing his left hand. Probably He is on press conference"
+                                class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             In February 2016, Systrom met with Pope Francis at the Vatican, where they discussed the
