--- a/cryptographers/elizabeth-smith-friedman.html
+++ b/cryptographers/elizabeth-smith-friedman.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
+    <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-	<meta name="description" content=" Do you know who was an American expert cryptanalyst and author? She also has been called 'America's first female cryptanalyst'.">
-	<meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+    <meta name="description"
+        content=" Do you know who was an American expert cryptanalyst and author? She also has been called 'America's first female cryptanalyst'.">
+    <meta name="keywords"
+        content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="title" content="Elizabeth Smith Friedman - The Gallery">
-	<meta name="robots" content="index, follow">
-	<meta name="revisit-after" content="7 days">
-	<meta name="author" content="Szymon Hyziak & Filip Kubala">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Elizabeth Smith Friedman - The Gallery">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Szymon Hyziak & Filip Kubala">
 
     <title>Elizabeth Smith Friedman - The Gallery</title>
 
@@ -19,7 +22,8 @@
     <link rel="stylesheet" href="../css/subpage-styles.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
+        rel="stylesheet">
 
     <!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -36,7 +40,8 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna" class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna"
+                                    class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -55,8 +60,10 @@
                         </p>
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
-                    <div class="image-container" title="Elizabeth Smith Friedman is sitting at the table with her husband by side.">
-                        <img src="../img/elizabeth-smith-friedman.jpg" class="introduction-image" alt="Elizabeth Smith Friedman is sitting at the table with her husband by side.">
+                    <div class="image-container"
+                        title="Elizabeth Smith Friedman is sitting at the table with her husband by side.">
+                        <img src="../img/elizabeth-smith-friedman.jpg" class="introduction-image"
+                            alt="Elizabeth Smith Friedman is sitting at the table with her husband by side.">
                     </div>
                 </div>
             </article>
@@ -77,8 +84,11 @@
                         <div class="tag" tabindex="0">Working With Her Husband</div>
                     </div>
                     <div class="paragraph">
-                        <div title="Portrait of Elizabeth Smith Friedman. At the time she is writing something in her notebook.">
-                            <img src="../img/elizabeth-smith-friedman-2.jpg" alt="Portrait of Elizabeth Smith Friedman. At the time she is writing something in her notebook." class="paragraph-image" tabindex="0">   
+                        <div
+                            title="Portrait of Elizabeth Smith Friedman. At the time she is writing something in her notebook.">
+                            <img src="../img/elizabeth-smith-friedman-2.jpg"
+                                alt="Portrait of Elizabeth Smith Friedman. At the time she is writing something in her notebook."
+                                class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Although Friedman worked closely with her husband as part of a team, many of her
@@ -91,13 +101,16 @@
             </article>
             <section>
                 <div class="newsletter" tabindex="0">
-                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i class="far fa-paper-plane"></i></span>
+                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i
+                            class="far fa-paper-plane"></i></span>
                     <div class="newsletter-email-button">
                         <div class="newsletter-email">
-                            <input type="email" id="input-email" class="email-form" placeholder=" " required title="Enter your email here.">
+                            <input type="email" id="input-email" class="email-form" placeholder=" " required
+                                title="Enter your email here.">
                             <label for="input-email" class="label-email">E-mail</label>
                         </div>
-                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign Up!</button>
+                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign
+                            Up!</button>
                     </div>
                 </div>
             </section>
@@ -107,10 +120,14 @@
                 <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon
                     Hyziak</p>
                 <p class="social-media-icons">
-                    <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
-                    <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
-                    <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
-                    <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i></a>
+                    <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
+                            id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
+                    <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube"
+                            id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
+                    <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost"
+                            id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
+                    <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in"
+                            id="linkedin" title="Linkedin" tabindex="0"></i></a>
                 </p>
             </div>
         </footer>
@@ -120,4 +137,5 @@
     <script src="../js/single-ink-with-offset.js" defer></script>
     <script src="../js/navbar-mobile.js" defer></script>
 </body>
+
 </html>
