--- a/programmers/bill-gates.html
+++ b/programmers/bill-gates.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
+    <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-	<meta name="description" content=" Do you know who is an American business magnate, software developer, investor, author, landowner, and philanthropist?">
-	<meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+    <meta name="description"
+        content=" Do you know who is an American business magnate, software developer, investor, author, landowner, and philanthropist?">
+    <meta name="keywords"
+        content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="title" content="Bill Gates - The Gallery">
-	<meta name="robots" content="index, follow">
-	<meta name="revisit-after" content="7 days">
-	<meta name="author" content="Szymon Hyziak & Filip Kubala">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Bill Gates - The Gallery">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Szymon Hyziak & Filip Kubala">
 
     <title>Bill Gates - The Gallery</title>
 
@@ -19,7 +22,8 @@
     <link rel="stylesheet" href="../css/subpage-styles.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
+        rel="stylesheet">
 
     <!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -36,7 +40,8 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna" class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna"
+                                    class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -55,14 +60,15 @@
                         </p>
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
-                    <div class="image-container" title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
+                    <div class="image-container"
+                        title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                         <img src="../img/bill-gates.jpeg" class="introduction-image">
                     </div>
                     <a href="ada-augusta-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
             </article>
             <section>
-                <div class="filler" tabindex="0"> 
+                <div class="filler" tabindex="0">
                     <img alt="" src="../img/study.png" class="filler-img">
                     <span class="filler-text">
                         Gates made a guest appearance as himself on the TV show The Big Bang Theory. The episode on
@@ -78,26 +84,32 @@
                     </div>
                     <div class="paragraph">
                         <div title="Bill Gates in a suit. He is smiling in a subtle way and looking to the left.">
-                            <img src="../img/bill-gates-2.jpg" alt="Bill Gates in a suit. He is smiling in a subtle way and looking to the left." class="paragraph-image" tabindex="0">   
+                            <img src="../img/bill-gates-2.jpg"
+                                alt="Bill Gates in a suit. He is smiling in a subtle way and looking to the left."
+                                class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Gates was born and raised in Seattle, Washington. In 1975, he co-founded Microsoft with
                             childhood friend Paul Allen. It went on to become the world's
-                            largest personal computer software company. During the late 1990s, he had been criticized for
-                            his business tactics, which have been considered anti-competitive. 
+                            largest personal computer software company. During the late 1990s, he had been criticized
+                            for
+                            his business tactics, which have been considered anti-competitive.
                         </p>
                     </div>
                 </div>
             </article>
             <section>
                 <div class="newsletter" tabindex="0">
-                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i class="far fa-paper-plane"></i></span>
+                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i
+                            class="far fa-paper-plane"></i></span>
                     <div class="newsletter-email-button">
                         <div class="newsletter-email">
-                            <input type="email" id="input-email" class="email-form" placeholder=" " required title="Enter your email here.">
+                            <input type="email" id="input-email" class="email-form" placeholder=" " required
+                                title="Enter your email here.">
                             <label for="input-email" class="label-email">E-mail</label>
                         </div>
-                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign Up!</button>
+                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign
+                            Up!</button>
                     </div>
                 </div>
             </section>
@@ -107,10 +119,14 @@
                 <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon
                     Hyziak</p>
                 <p class="social-media-icons">
-                    <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
-                    <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
-                    <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
-                    <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i></a>
+                    <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
+                            id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
+                    <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube"
+                            id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
+                    <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost"
+                            id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
+                    <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in"
+                            id="linkedin" title="Linkedin" tabindex="0"></i></a>
                 </p>
             </div>
         </footer>
@@ -120,4 +136,5 @@
     <script src="../js/single-ink-with-offset.js" defer></script>
     <script src="../js/navbar-mobile.js" defer></script>
 </body>
+
 </html>
