--- a/social-media-creators/pichai-sundararajan.html
+++ b/social-media-creators/pichai-sundararajan.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-    <meta name="description"
-        content=" Do you know who was an English mathematician and writer known for her work on mechanical general-purpose computer?">
+    <meta name="description" content="">
     <meta name="keywords"
         content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
@@ -62,8 +61,7 @@
                         </p>
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
-                    <div class="image-container"
-                        title="Pichai Sundararajan during a public speech. He is gesturing.">
+                    <div class="image-container" title="Pichai Sundararajan during a public speech. He is gesturing.">
                         <img src="../img/pichai-sundararajan1.jpeg" class="introduction-image"
                             alt="Pichai Sundararajan during a public speech. He is gesturing.">
                     </div>
@@ -87,7 +85,8 @@
                     </div>
                     <div class="paragraph">
                         <div title="Portrait of Pichai Sundararajan">
-                            <img src="../img/pichai-sundararajan.jpg" alt="Portrait of Pichai Sundararajan." class="paragraph-image" tabindex="0">
+                            <img src="../img/pichai-sundararajan.jpg" alt="Portrait of Pichai Sundararajan."
+                                class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             He was selected to become the next CEO of Google on August 10, 2015, after previously being
